fix(css): overflow style classes

--- a/src/core/global/_global.less
+++ b/src/core/global/_global.less
@@ -340,6 +340,9 @@
         .text-capitalize() !important;
       }
       .overflow-style {
+        .overflow-style() !important;
+      }
+      .overflow-style-inner {
         .overflow-style(@mode: inner) !important;
       }
       .design-setup {
